Bug Fix: Bug #Task_number HTML elements are overlapping on youyube video Problem: z-index of elements is not set properly
Solution:
- Modified z-index of related yellow buttons, carousel indicators and slider arrows.

--- a/revolv/static/css/screen.css
+++ b/revolv/static/css/screen.css
@@ -102,15 +102,13 @@ a:hover {
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.149);
     position: absolute;
-    /* left: 1153px; */
     width: 3rem;
     height: 3rem;
-    z-index: 447;
     position: absolute;
     border-style: solid;
     border-width: 2px;
     border-color: rgb(255, 255, 255);
-        background-color: #596d80;;
+    background-color: #596d80;;
     opacity: 1;
 
   <!--border-radius: 50%;-->
@@ -255,16 +253,11 @@ a:hover {
     width: 70%;
     left: 15%;
     top: 15vh;
-    /* height: 9vmin; */
-    z-index: 427;
     font-size: 1.55rem;
-    /* font-family: "Source Sans Pro"; */
     color: rgb(40, 40, 40);
     font-weight: bold;
     text-transform: uppercase;
-    /* line-height: 0.875; */
     text-align: center;
-    z-index: 428;
     padding: 1.25em 1%;
 
 }
@@ -280,7 +273,12 @@ a:hover {
     padding: 0;
     float: left;
 }
-
+.carousel-inner {
+    z-index: -10;
+}
+ol.carousel-indicators {
+    z-index: -5;
+}
 
 #myCarousel .carousel-prev-button {
     position: relative;
